objects/Support_Purchase__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Purchases</relationshipLabel>
        <relationshipName>Support_Purchases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add New Support</fullName>
                </value>
                <value>
                    <fullName>Case Open</fullName>
                </value>
                <value>
                    <fullName>Case Closed</fullName>
                </value>
                <value>
                    <fullName>Case Closed With Refund</fullName>
                </value>
                <value>
                    <fullName>Manual Adjustment</fullName>
                </value>
                <value>
                    <fullName>Case Updated To Not Billable</fullName>
                </value>
                <value>
                    <fullName>Case Updated To Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Support Purchases</relationshipLabel>
        <relationshipName>Support_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Purchases</relationshipLabel>
        <relationshipName>Support_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Applicable to Additions only.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Support Purchases</relationshipLabel>
        <relationshipName>Support_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Support Purchase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Action__c</columns>
        <columns>Case__c</columns>
        <columns>Order__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NSP-{0000}</displayFormat>
        <label>Support Purchase Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>